♻️ refactor: optmz implementation
